force-app/main/default/objects/nFORCE__Field_Extension__mdt/nFORCE__Field_Extension__mdt.object-meta.xml
<CustomObject>
    <description>This object stores a list of fields that require masking and specifies the masking method.</description>
    <label>Field Extension</label>
    <pluralLabel>Field Extension</pluralLabel>
</CustomObject>