force-app/main/default/objects/nFORCE__Field_Extension__mdt/fields/nFORCE__Active__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is manually populated. When enabled, it indicates that this field extension is active. When disabled, the field extension is not active. By default, it is active.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>