force-app/main/default/objects/nFORCE__Field_Extension__mdt/fields/nFORCE__Field_Name__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Field_Name__c</fullName>
    <description>This field is required. It is manually populated. This field stores the name of the field being extended.</description>
    <label>Field Name</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>