force-app/main/default/objects/nFORCE__Field_Extension__mdt/fields/nFORCE__Mask_Type__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Mask_Type__c</fullName>
    <description>The field is required. It is manually populated. It indicates the type of masking that must be applied to the field when displayed to an user. This impacts all users regardless of permission.</description>
    <label>Masking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Last 4 in Clear</fullName>
            </value>
            <value>
                <fullName>Mask All Characters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>