force-app/main/default/objects/nFORCE__Field_Extension__mdt/fields/nFORCE__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Object_Name__c</fullName>
    <description>This field is required. It is manually populated. This field indicates the fully qualified name of the object for the field which the extension applies.</description>
    <label>Object Name</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>